compiler/driver/tests/snapshots/diagnostics_snapshots__diag_parser_invalid_expression.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[L004]: Expected identifier after '@'
  --> p.ny:1:21
   |
  1 | fn main() { let x = @ }
   |                     ^
   = label: `@` must be followed by an identifier
   = help: example: `@derive(Clone)` or `@inline`
error[E002]: undefined variable ``
  --> p.ny:1:21
   |
  1 | fn main() { let x = @ }
   |                     ^
   = label: `` is not in scope
warning[W003]: unused variable `x`
  --> p.ny:1:17
   |
  1 | fn main() { let x = @ }
   |                 ^^^^^
   = label: declared here but never read
   = help: prefix with `_` if intentional: `let _x = ...`
   = help: or remove the binding if `x` is not needed
